--- a/css/style.css
+++ b/css/style.css
@@ -1,98 +1,107 @@
-html,body{height: 100%}
-li{list-style: none;}
-.templatemo-container{
-    display: table;
-    table-layout: fixed;
-    width: 100%;
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
-.left-container{
-    display: table-cell;
-    width: 30%;
-    float: none;
+li {
+  list-style: none;
 }
-.right-container{
-    display: table-cell;
-    width: 70%;
-    float:none;
-    padding: 0 30px 20px 0;
+.templatemo-container {
+  display: table;
+  table-layout: fixed;
+  width: 100%;
+  height: 100%;
 }
-.left-container{
-    color:white;
-    background: black;
-    display: table-cell;
-    padding:0 0 20px 30px;
-    vertical-align: top;
+.left-container {
+  display: table-cell;
+  width: 40%;
+  float: none;
 }
-.right-container{
-    background: white;
-    display: table-cell;
+.right-container {
+  display: table-cell;
+  width: 60%;
+  float: none;
+  padding: 0 30px 20px 0;
 }
-.tp-left-inner-container{
-    margin-right: 30px;
+.left-container {
+  color: white;
+  background: black;
+  display: table-cell;
+  padding: 0 0 20px 30px;
+  vertical-align: top;
 }
-.tp-right-inner-container{
-    margin-left: 30px;
-    max-width: 710px;
+.right-container {
+  background: white;
+  display: table-cell;
+}
+.tp-left-inner-container {
+  margin-right: 30px;
+}
+.tp-right-inner-container {
+  margin-left: 30px;
+  max-width: 710px;
 }
 .logo-left {
-    border-top: 1px solid gray;
-    border-right: none;
-    border-bottom: 1px solid gray;
-    border-left: 1px solid gray;
-    float: right;
-    padding: 20px 30px 20px 100px;
-    text-align: right;
-    margin-top: 20px;
-
-    margin-bottom: 60px;
+  border-top: 1px solid gray;
+  border-right: none;
+  border-bottom: 1px solid gray;
+  border-left: 1px solid gray;
+  float: right;
+  padding: 20px 30px 20px 100px;
+  text-align: right;
+  margin-top: 20px;
+  margin-bottom: 60px;
 }
 .logo-right {
-    border-top: 1px solid gray;
-    border-right: 1px solid gray;
-    border-bottom: 1px solid gray;
-    border-left: none;
-    float: left;
-    padding: 20px 100px 20px 30px;
-    margin-top: 20px;
-    margin-bottom: 60px;
+  border-top: 1px solid gray;
+  border-right: 1px solid gray;
+  border-bottom: 1px solid gray;
+  border-left: none;
+  float: left;
+  padding: 20px 100px 20px 30px;
+  margin-top: 20px;
+  margin-bottom: 60px;
 }
-.templatemo-nav{
-    clear: both;
-    font-size: 18px;
-    font-weight: 300;
-    float: right;
-    min-width: 250px;
+.templatemo-nav {
+  clear: both;
+  font-size: 18px;
+  font-weight: 300;
+  float: right;
+  min-width: 250px;
 }
-.templatemo-nav>li {
-    border: 2px solid #8C8C8C;
-    border-radius: 8px;
-    padding: 15px 50px;
-    margin-bottom: 20px;
-    transition: background-color 0.3s;
+.templatemo-nav > li {
+  border: 2px solid #8c8c8c;
+  border-radius: 8px;
+  padding: 15px 50px;
+  margin-bottom: 20px;
+  transition: background-color 0.3s;
 }
-.templatemo-nav>li>a{
-    color: white;
+.templatemo-nav > li > a {
+  color: white;
 }
-.templatemo-nav i{
-    margin-right: 20px;
+.templatemo-nav i {
+  margin-right: 20px;
 }
-.copyrights{text-indent:-9999px;height:0;line-height:0;font-size:0;overflow:hidden;}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.copyrights {
+  text-indent: -9999px;
+  height: 0;
+  line-height: 0;
+  font-size: 0;
+  overflow: hidden;
+}
+.tp-header {
+  clear: both;
+}
+.tp-content-top-title {
+  display: flex;
+  
+}
+.tp-content-top-title li {
+  border-bottom: 1px #ccc solid;
+}
+.tp-content-top-title ul {
+  flex: 1;
+}
+.tp-content-top-img {
+  flex: 1;
+  background-color: aquamarine;
+}
