--- a/css/style.css
+++ b/css/style.css
@@ -5,46 +5,28 @@ body {
 li {
   list-style: none;
 }
+/* 整体页面 */
 .templatemo-container {
   display: table;
   table-layout: fixed;
-  width: 100%;
-  height: 100%;
+  width: 1100px;
+  height: 590px;
+  transform: translateY(20%);
+  margin: 0 auto;
+  
 }
+/* 左边区域 */
 .left-container {
   display: table-cell;
   width: 40%;
   float: none;
-}
-.right-container {
-  display: table-cell;
-  width: 45%;
-  float: none;
-  padding: 0 30px 20px 0;
-}
-.mycontent{
-  display: table-cell;
-  width: 15%;
-  float: none;
-  background-color:rgba(64,70,80,1);
-}
-.left-container {
   color: white;
   background: rgb(30, 29, 29);
-  display: table-cell;
   padding: 0 0 20px 30px;
   vertical-align: top;
 }
-.right-container {
-  background: rgb(236, 233, 233);
-  display: table-cell;
-}
 .tp-left-inner-container {
   margin-right: 30px;
-}
-.tp-right-inner-container {
-  margin-left: 30px;
-  max-width: 710px;
 }
 .logo-left {
   border-top: 1px solid gray;
@@ -57,16 +39,7 @@ li {
   margin-top: 20px;
   margin-bottom: 60px;
 }
-.logo-right {
-  border-top: 1px solid gray;
-  border-right: 1px solid gray;
-  border-bottom: 1px solid gray;
-  border-left: none;
-  float: left;
-  padding: 20px 100px 20px 30px;
-  margin-top: 20px;
-  margin-bottom: 60px;
-}
+/* 左边区域的li列表 */
 .templatemo-nav {
   clear: both;
   font-size: 18px;
@@ -87,13 +60,29 @@ li {
 .templatemo-nav i {
   margin-right: 20px;
 }
-.copyrights {
-  text-indent: -9999px;
-  height: 0;
-  line-height: 0;
-  font-size: 0;
-  overflow: hidden;
+/* 左边区域结束 */
+/* 中间内容区域 */
+.right-container {
+  display: table-cell;
+  width: 45%;
+  float: none;
+  padding: 0 30px 20px 0;
 }
+.tp-right-inner-container {
+  margin-left: 30px;
+  max-width: 710px;
+}
+.logo-right {
+  border-top: 1px solid gray;
+  border-right: 1px solid gray;
+  border-bottom: 1px solid gray;
+  border-left: none;
+  float: left;
+  padding: 20px 100px 20px 30px;
+  margin-top: 20px;
+  margin-bottom: 60px;
+}
+/* 个人资料 */
 .tp-header {
   clear: both;
 }
@@ -102,7 +91,7 @@ li {
   
 }
 .tp-content-top-title li {
-  border-bottom: 1px #ccc solid;
+  border-bottom: 1px rgb(236, 233, 233) solid;
 }
 .tp-content-top-title ul {
   flex: 1;
@@ -111,3 +100,26 @@ li {
   flex: 1;
   background-color: aquamarine;
 }
+/* 个人资料结束 */
+/* 中间区域结束 */
+/* 个人信息数据 */
+.mycontent{
+  
+  float: none;
+  background: rgb(236, 233, 233);  
+  /* background-color:rgb(155, 166, 186); */
+  height: px;
+  border: #8c8c8c 1px solid;
+  padding: 2px;
+}
+/* 个人信息数据结束 */
+
+/* 
+.copyrights {
+  text-indent: -9999px;
+  height: 0;
+  line-height: 0;
+  font-size: 0;
+  overflow: hidden;
+} */
+
