--- a/css/style.css
+++ b/css/style.css
@@ -1,125 +1,263 @@
-html,
-body {
-  height: 100%;
+/* 全局样式 */
+body,
+html {
+  font-family: microsoft yahei, sans-serif;
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
+  color: #555;
+  width: 100% !important;
+  height: 100% !important;
 }
-li {
+h1 {
+  font-weight: 700;
+}
+h1 strong {
+  font-weight: 900;
+}
+h2 {
+  text-transform: uppercase;
+  line-height: 20px;
+  margin: 0;
+}
+h3 {
+  font-size: 16px;
+  font-weight: 700;
+}
+h5 {
+  text-transform: uppercase;
+  font-weight: 700;
+  line-height: 20px;
+}
+p {
+  font-family: microsoft yahei, sans-serif;
+}
+p.intro {
+  font-size: 16px;
+  margin: 12px 0 0;
+  line-height: 24px;
+  font-family: "Open Sans", sans-serif;
+}
+a {
+  color: #fff;
+}
+a:hover,
+a:focus {
+  text-decoration: none;
+  color: rgb(233, 113, 21);
+}
+ul,
+ol {
   list-style: none;
 }
-/* 整体页面 */
-.templatemo-container {
-  display: table;
-  table-layout: fixed;
-  width: 1100px;
-  height: 590px;
-  transform: translateY(20%);
-  margin: 0 auto;
-  
-}
-/* 左边区域 */
-.left-container {
-  display: table-cell;
-  width: 40%;
-  float: none;
-  color: white;
-  background: rgb(30, 29, 29);
-  padding: 0 0 20px 30px;
-  vertical-align: top;
-}
-.tp-left-inner-container {
-  margin-right: 30px;
-}
-.logo-left {
-  border-top: 1px solid gray;
-  border-right: none;
-  border-bottom: 1px solid gray;
-  border-left: 1px solid gray;
-  float: right;
-  padding: 20px 30px 20px 100px;
-  text-align: right;
-  margin-top: 20px;
-  margin-bottom: 60px;
-}
-/* 左边区域的li列表 */
-.templatemo-nav {
-  clear: both;
-  font-size: 18px;
-  font-weight: 300;
-  float: right;
-  min-width: 250px;
-}
-.templatemo-nav > li {
-  border: 2px solid #8c8c8c;
-  border-radius: 8px;
-  padding: 15px 50px;
-  margin-bottom: 20px;
-  transition: background-color 0.3s;
-}
-.templatemo-nav > li > a {
-  color: white;
-}
-.templatemo-nav i {
-  margin-right: 20px;
-}
-/* 左边区域结束 */
-/* 中间内容区域 */
-.right-container {
-  display: table-cell;
-  width: 45%;
-  float: none;
-  padding: 0 30px 20px 0;
-}
-.tp-right-inner-container {
-  margin-left: 30px;
-  max-width: 710px;
-}
-.logo-right {
-  border-top: 1px solid gray;
-  border-right: 1px solid gray;
-  border-bottom: 1px solid gray;
-  border-left: none;
-  float: left;
-  padding: 20px 100px 20px 30px;
-  margin-top: 20px;
-  margin-bottom: 60px;
-}
-/* 个人资料 */
-.tp-header {
-  clear: both;
-}
-.tp-content-top-title {
-  display: flex;
-  
-}
-.tp-content-top-title li {
-  border-bottom: 1px rgb(236, 233, 233) solid;
-}
-.tp-content-top-title ul {
-  flex: 1;
-}
-.tp-content-top-img {
-  flex: 1;
-  background-color: aquamarine;
-}
-/* 个人资料结束 */
-/* 中间区域结束 */
-/* 个人信息数据 */
-.mycontent{
-  
-  float: none;
-  background: rgb(236, 233, 233);  
-  /* background-color:rgb(155, 166, 186); */
-  height: px;
-  border: #8c8c8c 1px solid;
-  padding: 2px;
-}
-/* 个人信息数据结束 */
-
-/* 
-.copyrights {
-  text-indent: -9999px;
-  height: 0;
-  line-height: 0;
+.clearfix:after {
+  visibility: hidden;
+  display: block;
   font-size: 0;
-  overflow: hidden;
-} */
-
+  content: " ";
+  clear: both;
+  height: 0;
+}
+.clearfix {
+  display: inline-block;
+}
+.clearfix {
+  display: block;
+}
+ul,
+ol {
+  padding: 0;
+  webkit-padding: 0;
+  moz-padding: 0;
+}
+/* 全局样式结束 */
+/* nav */
+.navbar-item {
+  margin-bottom: 0;
+  background: #000;
+}
+.navbar-item .navbar-brand i.fa {
+  color: rgb(233, 113, 21);
+}
+.navbar-item .navbar-brand .navbar-toggle {
+  padding: 4px 6px;
+  font-size: 16px;
+  color: #fff;
+}
+.navbar-item a {
+  color: #fff;
+}
+.navbar-item .nav li a {
+  -webkit-transition: background 0.5s ease-in-out;
+  -moz-transition: background 0.5s ease-in-out;
+  transition: background 0.5s ease-in-out;
+}
+.navbar-item .nav li a:hover,
+.navbar-item .nav li a:focus,
+.navbar-item .nav li a:active {
+  color: rgb(233, 113, 21);
+  background-color: transparent;
+}
+@media (min-width: 768px) {
+  .navbar-item {
+    background: 0 0;
+    -webkit-transition: background 0.5s ease-in-out;
+    -moz-transition: background 0.5s ease-in-out;
+    transition: background 0.5s ease-in-out;
+  }
+}
+/* nav-end */
+/* header */
+.intro {
+  display: table;
+  width: 100%;
+  height: 100%;
+  background: url(../img/intro-bg1.jpg) no-repeat center bottom;
+  text-align: center;
+  color: #fff;
+}
+.intro .intro-body {
+  display: table-cell;
+  vertical-align: middle;
+}
+.intro .intro-body .brand-heading {
+  color: rgb(233, 113, 21);
+}
+.intro .intro-body .intro-text {
+  font-size: 18px;
+}
+@media (min-width: 768px) {
+  .intro {
+    height: 100%;
+  }
+  .intro .intro-body h1 {
+    font-size: 70px;
+    font-weight: 700;
+  }
+  .intro .intro-body .intro-text {
+    font-size: 20px;
+  }
+}
+.btn-circle {
+  width: 70px;
+  height: 70px;
+  margin-top: 100px;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  border-radius: 100% !important;
+  font-size: 40px;
+  color: rgb(233, 113, 21);
+  background: 0 0;
+}
+.btn-circle:hover,
+.btn-circle:focus {
+  color: rgb(233, 113, 21);
+  background: rgba(255, 255, 255, 0.1);
+}
+.btn-circle:hover i.animated {
+  -webkit-animation-name: plus;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-duration: 1s;
+}
+@-webkit-keyframes plus {
+  0% {
+    -webkit-transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.3);
+  }
+  100% {
+    -webkit-transform: scale(1);
+  }
+}
+/* header-end */
+/* mycontent */
+.section-title h2 {
+  font-weight: 400;
+  margin-bottom: 30px;
+  color: #ddd;
+}
+.section-title hr {
+  background: rgb(233, 113, 21);
+  border: 0;
+  width: 70px;
+  height: 4px;
+  margin-bottom: 30px;
+}
+#services {
+  background: #6f7275;
+  padding: 80px 0 50px 0;
+  color: #aaa;
+  background: -webkit-linear-gradient(top, #6f7275 0%, #31353a 100%);
+}
+#services h4 {
+  color: rgb(233, 113, 21);
+  transition: all 0.5s;
+}
+#services .fa {
+  height: 120px;
+  width: 120px;
+  font-size: 50px;
+  border-radius: 50%;
+  background: #474b4f;
+  color: #aaa;
+  padding: 34px 0;
+  margin-bottom: 10px;
+  transition: all 0.5s ease-out;
+}
+#services .fa:hover {
+  color: rgb(233, 113, 21);
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
+}
+/* mycontent-end */
+/* myskill */
+#about{
+  background:-webkit-linear-gradient(top, rgb(90,80,70) 0%, rgb(109,105,102) 100%)
+}
+.progress{
+  height: 30px;
+  border-radius: 10px;
+  line-height: 35px;
+  background:#809495;
+  padding: 6px;
+  overflow: visible;
+  margin-top: 20px;
+}
+#about  h3{
+  color:rgb(233, 113, 21);
+}
+.progress:after{
+  content:'';
+  display: block;
+  border-top:4px dashed #ccc;
+  margin-top: 8px;
+}
+.progress .progress-bar span{
+  position: absolute;
+  right: -40px;
+  top:-40px;
+  color: #ccc;
+  background: #333;
+  display: block;
+  font-size: 17px;
+  font-weight: bold;
+  border-radius: 6px;
+}
+.progress .progress-bar{
+  animation: animate-bar 3s ease-out;
+  border-radius: 10px 0 0 10px;
+  position: relative;
+}
+.progress .progress-bar .fa{
+  position: absolute;
+  right: -43px;
+  top:-11px;
+  font-size: 37px;
+  color: rgb(233, 113, 21);
+}
+@-webkit-keyframes animate-bar{
+  0%{
+    width:0%;
+  }
+}
+/* myskill-end */
